--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.554.0",
-		"next": "16.0.3",
+		"next": "^16.0.7",
 		"next-themes": "^0.4.6",
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
 		"react-loading-skeleton": "^3.5.0",
 		"tailwind-merge": "^3.4.0"
 	},
@@ -36,7 +36,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "16.0.3",
+		"eslint-config-next": "^16.0.7",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
